# web-site-extractor

./: README.md  pyproject.toml
src/web_site_extraction/: app.py  extract_article_number.py  process_csv.py
