[project]
name = "web-site-extraction"
version = "0.1.0"
description = ""
authors = [{ name = "Johan Saarsoo", email = "johan.saarsoo@fortnox.se" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "requests (>=2.32.3,<3.0.0)", "bs4 (>=0.0.2,<0.0.3)", "tqdm (>=4.67.1,<5.0.0)", "pandarallel (>=1.6.5,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
